--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <!-- injector:base-start -->
-    <base href="/">
+    <base href="/tasklist/">
     <!-- injector:base-end -->
     <title>tasklist</title>
     <meta name="description" content="">
