add completed toggle

--- a/app/index.html
+++ b/app/index.html
@@ -13,9 +13,10 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="bower_components/bootstrap-toggle/css/bootstrap-toggle.min.css" />
+    
     <!-- endbower -->
     <!-- endbuild -->
+    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css" rel="stylesheet">
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
@@ -41,10 +42,8 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/firebase/firebase.js"></script>
     <script src="bower_components/angularfire/dist/angularfire.js"></script>
-    <script src="bower_components/bootstrap-toggle/js/bootstrap-toggle.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
-
 
         <!-- build:js(.) scripts/plugins.js -->
 
