--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <!-- injector:base-start -->
-    <base href="/">
+    <base href="/tasklist/">
     <!-- injector:base-end -->
     <title>tasklist</title>
     <meta name="description" content="">
@@ -13,7 +13,6 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    
     <!-- endbower -->
     <!-- endbuild -->
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css" rel="stylesheet">
